cli/tests/snapshot/inputs/errors/enum_contract_shape_mismatch.ncl
# capture = 'stderr'
# command = ['eval']
(std.function.id | forall r. [| 'Foo Number, 'Bar String, 'Qux; r |] -> [| 'Foo Number, 'Bar String, 'Qux; r |]) 'Foo
